// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly enzyme 1`] = `
<div>
  <h1>
     Basic Test
  </h1>
  <p>
     This is a basic Test Component
  </p>
</div>
`;

exports[`renders correctly enzyme 2`] = `
<Basic>
  <div>
    <h1>
       Basic Test
    </h1>
    <p>
       This is a basic Test Component
    </p>
  </div>
</Basic>
`;
